scrollbar fix

--- a/tailwind.css
+++ b/tailwind.css
@@ -4,22 +4,24 @@
 
 @layer utilities {
     .scrollbar::-webkit-scrollbar {
-        width: 8px;
-        height: 8px;
+        width: 6px;
     }
 
     .scrollbar::-webkit-scrollbar-track {
-        border-radius: 100vh;
-        background: #1f2937;
+        background: #333;
     }
 
     .scrollbar::-webkit-scrollbar-thumb {
-        background: #4b5563;
-        border-radius: 100vh;
-        border: 3px solid #4b5563;
+        min-height: 80px;
+        background: #555;
+        border-radius: 8px;
     }
 
     .scrollbar::-webkit-scrollbar-thumb:hover {
-        background: #6b7280;
+        background: #777;
+    }
+
+    .scrollbar::-webkit-scrollbar-button {
+        display: none;
     }
 }
